--- a/Source/lovely/Patches.toml
+++ b/Source/lovely/Patches.toml
@@ -1,7 +1,7 @@
 [manifest]
 version = "1.0.0"
 dump_lua = true
-priority = 100000000
+priority = 0
 
 [[patches]]
 [patches.pattern]
@@ -21,10 +21,24 @@ match_indent = true
 
 [[patches]]
 [patches.pattern]
-target = "functions/UI_definitions.lua"
-pattern = "local faces = {'K','Q','J'}"
-position = "at"
-payload = "local faces = {'A','K','Q','J','T','9','8','7','6','5','4','3','2'}"
+target = "globals.lua"
+pattern = "self.METRICS = {"
+position = "before"
+payload = '''
+G.COLLABS.pos['2'] = {x=0,y=0}
+G.COLLABS.pos['3'] = {x=1,y=0}
+G.COLLABS.pos['4'] = {x=2,y=0}
+G.COLLABS.pos['5'] = {x=3,y=0}
+G.COLLABS.pos['6'] = {x=4,y=0}
+G.COLLABS.pos['7'] = {x=5,y=0}
+G.COLLABS.pos['8'] = {x=6,y=0}
+G.COLLABS.pos['9'] = {x=7,y=0}
+G.COLLABS.pos['10'] = {x=8,y=0}
+G.COLLABS.pos['Jack'] = {x=9,y=0}
+G.COLLABS.pos['Queen'] = {x=10,y=0}
+G.COLLABS.pos['King'] = {x=11,y=0}
+G.COLLABS.pos['Ace'] = {x=12,y=0}
+'''
 match_indent = true
 
 [[patches]]
@@ -33,6 +47,14 @@ target = "functions/UI_definitions.lua"
 pattern = "4*G.CARD_W,"
 position = "at"
 payload = "8*G.CARD_W,"
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = "functions/UI_definitions.lua"
+pattern = "local faces = {'K','Q','J'}"
+position = "at"
+payload = "local faces = {'A','K','Q','J','T','9','8','7','6','5','4','3','2'}"
 match_indent = true
 
 [[patches]]
